--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 ch3/*.sqlite3
 ch3/mysite/__pycache__/*
 ch3/polls/__pycache__/*
+ch3/polls/migrations/*
 ch3/polls/migrations/__pycache__/*
 *.code-workspace
