--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 .venv/*
-ch3/*.sqlite3
-ch3/mysite/__pycache__/*
-ch3/polls/__pycache__/*
-ch3/polls/migrations/*
-ch3/polls/migrations/__pycache__/*
-*.code-workspace
+**/*.sqlite3
+**/__pycache__/
+**/migrations/
+**/*.code-workspace
